# Revelations-Launcher

./: .SRCINFO  .gitignore  BUILD.md  LICENSE  PKGBUILD  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: nightly.yml  publish.yml
scripts/: fix-macos-quarantine.sh  postinstall.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: post-build-macos.sh
src-tauri/src/: lib.rs  main.rs
src/components/common/: AchievementToast.tsx  ClickParticles.tsx  PanoramaBackground.tsx  SkinViewer.tsx
src/components/layout/: AppHeader.tsx  DownloadOverlay.tsx
src/components/modals/: CustomTUModal.tsx  SpecialThanksModal.tsx  TeamModal.tsx
src/components/views/: HomeView.tsx  SettingsView.tsx  SetupView.tsx  SkinsView.tsx  ThemesView.tsx  VersionsView.tsx  WorkshopView.tsx
src/context/: LauncherContext.tsx
src/css/: App.css  index.css
src/hooks/: useAppConfig.ts  useAudioController.ts  useDiscordRPC.ts  useGameManager.ts  useGamepad.ts  useLocalStorage.ts  usePlatform.ts  useSkinSync.ts  useUpdateCheck.ts
src/pages/: App.tsx
src/services/: RpcService.ts  TauriService.ts  unused.ts
